fix(popup): add css for images too big

--- a/blocks/popup.css
+++ b/blocks/popup.css
@@ -41,6 +41,9 @@
 }
 
 .popup__image {
+  max-width: 75vw;
+  max-height: 75vh;
+  display: flex;
 }
 
 .popup__caption {
